samples/_failures_safe/1761097656_328336_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_12cc2bbb.c: In function ‘process_input’:
./samples/SAFE/__tmp_12cc2bbb.c:136:9: error: expected expression at end of input
  136 |         if (
      |         ^~
./samples/SAFE/__tmp_12cc2bbb.c:136:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_12cc2bbb.c:136:9: error: expected declaration or statement at end of input
